--- a/app/src/main/res/layout/fragment_login_fragment.xml
+++ b/app/src/main/res/layout/fragment_login_fragment.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,19 +7,12 @@
     android:background="@drawable/back_3"
     android:padding="16dp">
 
-    <!-- Lottie Animation at the center top -->
-
-    <!-- Email Text Field -->
-
-    <!-- Password Text Field -->
-
-    <!-- Sign In Button -->
-
+    <!-- Lottie Animation at the top -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_animation"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        app:layout_constraintBottom_toTopOf="@id/emailField"
+        app:layout_constraintBottom_toTopOf="@id/emailInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,37 +21,50 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/login" />
 
-    <EditText
-        android:id="@+id/emailField"
+    <!-- Email Text Field -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/emailInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:background="@color/white"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lottie_animation" />
+        app:layout_constraintTop_toBottomOf="@id/lottie_animation"
+        app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Headline6">
 
-    <EditText
-        android:id="@+id/passwordField"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:padding="16dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Password Text Field -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/passwordInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
-        android:background="@color/white"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailField"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:endIconMode="password_toggle">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            android:padding="16dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Sign In Button -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signInButton"
         android:layout_width="wrap_content"
@@ -68,7 +73,7 @@
         app:cornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordField"
+        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
         app:layout_constraintHorizontal_bias="0.5"
         android:layout_marginTop="16dp" />
 
@@ -83,7 +88,7 @@
         app:civ_circle_background_color="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signInButton"
+        app:layout_constraintTop_toBottomOf="@id/signInButton"
         app:layout_constraintHorizontal_bias="0.5"
         android:layout_marginTop="16dp"
         tools:ignore="ContentDescription" />
@@ -98,7 +103,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogleButton"
+        app:layout_constraintTop_toBottomOf="@id/signInWithGoogleButton"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp" />
 
@@ -112,6 +117,6 @@
         app:icon="@drawable/incognito_circle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/notHaveAcountText" />
+        app:layout_constraintTop_toBottomOf="@id/notHaveAcountText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
