--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.home.homeActivity.HomeFragment">
+    tools:context=".view.homeActivity.HomeFragment">
 
     <ScrollView
         android:id="@+id/home_scrollView"
