--- a/app/src/main/res/layout/ingediant_row.xml
+++ b/app/src/main/res/layout/ingediant_row.xml
@@ -23,7 +23,7 @@
         <!-- ImageView for ingredient -->
         <ImageView
             android:id="@+id/ingredient_image"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:scaleType="centerCrop"
