--- a/app/src/main/res/navigation/nav_button.xml
+++ b/app/src/main/res/navigation/nav_button.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.foodplanneritiandroidjava.view.home.homeActivity.HomeFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.homeActivity.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_mealFragment"
@@ -66,7 +66,7 @@
     </fragment>
     <fragment
         android:id="@+id/mealDetailsFragment"
-        android:name="com.example.foodplanneritiandroidjava.view.home.details.MealDetailsFragment"
+        android:name="com.example.foodplanneritiandroidjava.view.details.MealDetailsFragment"
         android:label="MealDetailsFragment" >
         <argument
             android:name="mealID"
